# odin

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
odin/: config.h
odin/arch/: x64.h
odin/compiler/: clang.h  gcc.h  msvc.h
odin/platform/: android.h  apple.h  emscripten.h  linux.h  playstation.h  posix.h  windows.h  xbox.h
odin/simd/: avx.h  neon.h  sse.h
odin/std/: libc++.h  libstdc++.h  msvc.h
